change to arial, fix spacing and add home button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,7 +115,7 @@ input, select, textarea {
 
 /* Type */
 
-	html {
+    html {
 		font-size: 16pt;
 	}
 
@@ -148,10 +148,10 @@ input, select, textarea {
 	}
 
 	body, input, select, textarea {
-		font-family: "Merriweather", Georgia, serif;
+		font-family: Arial, Georgia, serif;
 		font-weight: 300;
 		font-size: 1rem;
-		line-height: 2.375;
+		line-height: 1.5;
 	}
 
 	a {
@@ -177,7 +177,7 @@ input, select, textarea {
 
 	p {
 		text-align: left;
-		margin: 0 0 2rem 0;
+		margin: 0 0 0 0;
 		font-size: 1rem;
 	}
 
@@ -2090,6 +2090,7 @@ input, select, textarea {
 		text-decoration: none;
 		text-transform: none;
 		white-space: nowrap;
+		margin-top: 1.5rem;
 	}
 
 		input[type="submit"].icon:before,
@@ -2645,7 +2646,7 @@ input, select, textarea {
 			}
 
 			.image.main img {
-				width: 75%;
+				width: 60%;
 				margin: 2rem auto 2rem auto;
 			}
 
